2009-09-28  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_pager_mb): add close button

2009-09-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate): add eject and circle buttons

2009-09-23  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate): save/restore buttons background

	* avatar.c (avt_initialize): make window not resizable
	remove most code for resizing the window
	(avt_change_mode): new function, was avt_resize

	* avatarsay.c (checkoptions): fix --fullfullscreen

2009-09-23  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_wait_button, avt_decide):
	center button-inlays on button

	* akfavatar.h: AVT_NAV_* instead of AVT_DIR_*
	avatar.c (avt_navigate): adapted
	pascal/akfavatar.pas: adapted

2009-09-22  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate):
	add further buttons: stop, pause, help

	* avatar.c (avt_navigate):
	center button-inlays on button,
	so bitmaps can be made even smaller

2009-09-21  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate):
	add support for fast-forward and fast-backward buttons

	* avatar.c (avt_navigate):
	add support for plus and minus buttons
	simplify function with the macro avt_nav_add

2009-09-20  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xbm):
	renamed from avt_load_image_xbm_rgb
	all callers changed

	* akfavatar.h, avatar.c (avt_import_xbm, avt_show_image_xbm):
	new functions

	* avatar.c (avt_show_image_xpm):
	use avt_load_image_xpm instead of avt_import_xpm

	* avatar.c (avt_navigate): renamed from avt_get_direction

	* avatar.c (avt_navigate): add support for a cancel button

2009-09-19  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_get_direction): new function
	pascal/akfavatar.pas: adapted

	* avatar.c (avt_load_image_xbm_rgb): new function
	many callers adapted

2009-09-18  Andreas K. Foerster  <info@akfoerster.de>
